@@ -3,7 +3,6 @@
 #define HAVE_UNISTD_H 1
 #define PQXX_HAVE_DISTANCE 1
 #define PQXX_HAVE_GCC_VISIBILITY 1
-#define PQXX_HAVE_NAN 1
 #define PQXX_HAVE_POLL 1
 #define PQXX_HAVE_SLEEP 1
 #define PQXX_HAVE_STRERROR_R 1
